Added back in the missing Rows and Columns for the TextAreaFor Notes

--- a/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
+++ b/src/Treehouse.FitnessFrog/Views/Entries/Add.cshtml
@@ -43,7 +43,7 @@
 
 			<div class="form-group">
 				@Html.LabelFor(m => m.Notes, new { @class = "control-label" })
-				@Html.TextAreaFor(m => m.Notes, new { @class = "form-control" })
+				@Html.TextAreaFor(m => m.Notes, 14, 20, new { @class = "form-control" })
 			</div>
 
 		</div>
